spacing fixed

--- a/style/style.css
+++ b/style/style.css
@@ -57,7 +57,7 @@ h1 {
 
 h1,
 h2 {
-  padding: 2rem 0 5rem 0;
+  padding: 3rem 0;
 }
 
 h2,
@@ -65,7 +65,7 @@ h3 {
   font-size: 2.5rem;
 }
 h3 {
-  margin-bottom: 1rem;
+  margin-bottom: 1.7rem;
 }
 
 h2,
